<resources>
    <string name="app_name">CardScore</string>
    <string name="action_settings">Settings</string>

    <string name="action_bar_enter_names">Enter names</string>
    <string name="action_bar_score">Score</string>
    <string name="action_bar_winner">Winner</string>
    <string name="dialog_score_title">Enter a new score:</string>

    <string name="player_name_1_hint">Player 1 (You)</string>
    <string name="player_name_2_hint">Player 2 (Right)</string>
    <string name="player_name_3_hint">Player 3 (Front)</string>
    <string name="player_name_4_hint">Player 4 (Left)</string>

    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="confirm_button">Start</string>

    <string name="check_bid">Check Bid</string>
    <string name="next_round">Next Round</string>
    <string name="winner_congrats">Congratulations!!!</string>
    <string name="and">and</string>
    <string name="hearts_button_name">Hearts</string>
    <string name="fourhundred_button_name">400</string>
    <string name="pick_game">Pick a game:</string>
    <string name="Next">Next</string>
    <string name="undo_button">Undo</string>
    <string name="dealer">Dealer</string>

</resources>
