<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:weightSum="1"
                tools:context=".PlayerNameActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_marginBottom="24dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/names">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            style="?android:listSeparatorTextViewStyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView3"
            />

        <EditText
            android:id="@+id/player_name_1_EditText"
            android:hint="@string/player_name_1_hint"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/player_name_3_EditText"
            android:hint="@string/player_name_3_hint"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/player_name_1_EditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/names">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioGroup"
            android:layout_marginTop="40dp">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

        </RadioGroup>

    </RelativeLayout>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/textView2"
            android:layout_below="@+id/names"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/player_name_2_EditText"
            android:hint="@string/player_name_2_hint"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/player_name_4_EditText"
            android:hint="@string/player_name_4_hint"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/player_name_2_EditText"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"/>

    </RelativeLayout>


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top_bot"
            android:layout_weight="1"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/fourhundred_button"
                android:background="@mipmap/ace_of_hearts_top"
                android:layout_marginRight="2.5dp"
                android:singleLine="false"
                android:shadowColor="#ff720d00"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top_bot"
            android:layout_weight="1"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/hearts_button"
                android:background="@mipmap/queen_of_spades_top"
                android:layout_marginLeft="2.5dp"
                android:shadowColor="#ff720d00"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
